--- a/Editor/UniSceneViewCameraAligner.asmdef
+++ b/Editor/UniSceneViewCameraAligner.asmdef
@@ -1,7 +1,6 @@
 {
-    "name": "com.baba_s.uni-scene-view-camera-aligner",
+    "name": "UniSceneViewCameraAligner",
     "references": [],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -9,6 +8,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": []
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
