--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "com.baba_s.uni-scene-view-camera-aligner",
+    "name": "com.baba-s.uni-scene-view-camera-aligner",
     "displayName": "UniSceneViewCameraAligner",
     "version": "1.0.0",
-    "unity": "2018.4",
-    "author": "baba_s",
+    "unity": "2019.2",
+    "author": "baba-s",
     "description": "",
     "dependencies": {}
 }
